scrollbar css and footer - there is a bug to fix :x

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,3 +11,23 @@ html, body {
     margin: 0;
     padding: 0;
 }
+
+/* custom scrollbar */
+::-webkit-scrollbar {
+width: 20px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #d4d4d4;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #b1b1b1;
+}
